02-nsx-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  labels:
    app: nsx-demo
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: nsx-demo
